# fricas

./: .gitattributes  .gitignore  CHANGELOG.old  ChangeLog  ChangeLog.build-improvements  ChangeLog.wh  FAQ  FAQ.rst  INSTALL  INSTALL.CYGWIN  INSTALL.aldor  LICENSE  LICENSE.txt  Makefile.in  Makenotes.tex  README  README.build-improvements  README.md  README.rst  README.wh  _config.yml  build-setup.sh  config.lisp  confignotes.tex  configure  configure.ac  configure.ac.pamphlet  generate_INSTALL.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-sage.yml  ci.yml  conditional-lisp.yml  linux-aldor.yml  linux-ccl.yml  linux-clisp.yml  linux-cmucl.yml  linux-ecl.yml  linux-gcl.yml  linux.yml  linuxJulia_ccl.yml  linuxJulia_sbcl.yml  macOS-ccl.yml  macOS-clisp.yml  macOS-ecl.yml  macOS.yml  macOSJulia_sbcl.yml  static.yml  windows-ccl.yml  windows-clisp.yml  windows.yml  windowsJulia_sbcl.yml
config/: axiom-c-macros.h.in  axiom.m4  config.guess  config.sub  fricas.m4  fricas_c_macros.h.in  setup-dep.mk  var-def.mk
contrib/: generate_docs.py  generate_jldocs.py  load-fricas.lisp  mk_shlib.lisp  omcl.diff
contrib/cygwin/: mk_app
contrib/debian/: changelog  control  mk_deb
contrib/emacs/: Makefile.in  axiom.el.pamphlet  eaxiom  efricas  fricas-comint-failed-attempt.el  fricas-cpl.el  fricas-cpl.hd  fricas-cpl.tl  fricas.el  fricas.el.pamphlet  gen-cpl.lisp
contrib/macos/: FriCAS.c  Info.plist  README  appIcon.icns  create_dmg  mk_app
contrib/sbcl/: README  os-linux.diff
contrib/texmacs/: README
debian/: README.Debian  changelog  changelog.in  control  fricas.desktop  fricas.install  fricas.menu  fricas.xpm  rules  watch
doc/: README.dist  algebra_build.txt  build.txt  debug.txt  fricas.1  runtime.txt  sttaylor.txt
docs/: MCP_SERVER_DESIGN.md  index.html  index.md
docs/constructors/: JLArbitraryPrecision.md  JLCF32LinearAlgebra.md  JLCF64LinearAlgebra.md  JLCommutativeRing.md  JLComplexF32.md  JLComplexF32Matrix.md  JLComplexF32SquareMatrix.md  JLComplexF32Vector.md  JLComplexF64.md  JLComplexF64Matrix.md  JLComplexF64MatrixTranscendentalFunctions.md  JLComplexF64SquareMatrix.md  JLComplexF64Vector.md  JLComplexFloat.md  JLComplexFloatSpecialFunctions.md  JLDataFrame.md  JLDrawFunctions.md  JLF32ArrayFunctions.md  JLF32LinearAlgebra.md  JLF32SquareMatrix.md  JLF64ArrayFunctions.md  JLF64LinearAlgebra.md  JLF64MatrixTranscendentalFunctions.md  JLF64SquareMatrix.md  JLFloat.md  JLFloat32.md  JLFloat32Matrix.md  JLFloat32SpecialFunctions.md  JLFloat32SpecialFunctions2.md  JLFloat32Vector.md  JLFloat32VectorFunctions2.md  JLFloat64.md  JLFloat64Matrix.md  JLFloat64SpecialFunctions.md  JLFloat64SpecialFunctions2.md  JLFloat64Vector.md  JLFloat64VectorFunctions2.md  JLFloatSpecialFunctions.md  JLFloatSpecialFunctions2.md  JLInt64.md  (+91 more)
examples/: FloatDocumentation.md  Pari.jl  Solving_Polynomial.md  Symbolics.jl  equation_results.md  mcp.txt  mcp_config.json  test_mcp.py
license/: LICENSE.AXIOM
src/: ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet  Makenotes.tex
src/aldor/: Makefile.in  Makefile2.in  Makefile3.in  README  aldor.mk  boolean0.as  cliques.as  extra_deps.lst  genax.lsp  gendepap.lsp  initlist.as  libaxiom.tex  libfricas.tex
src/algebra/: ChangeLog  ChangeLog.bu  Makefile.in  Makefile.pamphlet  Makenotes.tex  acplot.spad  acplot.spad.pamphlet  aggcat.spad  aggcat.spad.pamphlet  aggcat2.spad  aggcat2.spad.pamphlet  ainterval.spad  alg_top.spad  algcat.spad  algcat.spad.pamphlet  algext.spad  algext.spad.pamphlet  algfact.spad  algfact.spad.pamphlet  algfunc.spad  algfunc.spad.pamphlet  allfact.spad  allfact.spad.pamphlet  alql.spad  alql.spad.pamphlet  amodgcd.spad  amodgcd.spad.pamphlet  any.spad  any.spad.pamphlet  array1.spad  array1.spad.pamphlet  array2.spad  array2.spad.pamphlet  attreg.spad.pamphlet  attribs.spad  attribs.spad.pamphlet  axtimer.as.pamphlet  bags.spad  bags.spad.pamphlet  bezout.spad  (+780 more)
src/boot/: ChangeLog.build-improvements  Makefile.in  Makenotes.tex  boot-proclaims.lisp  btincl2.boot  btincl2.boot.pamphlet  btpile2.boot  btpile2.boot.pamphlet  btscan2.boot  btscan2.boot.pamphlet  initial-env.lisp  initial-env.lisp.pamphlet  ptyout.boot  ptyout.boot.pamphlet  typars.boot  typars.boot.pamphlet  typrops.boot  typrops.boot.pamphlet  tytree1.boot  tytree1.boot.pamphlet
src/clef/: ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet  e_buf.c  e_buf.h  edible.c  edible.c.pamphlet  edible.h  edin.c  fnct_key.c  prt.c  spadbuf.c  tio_funs.h  wct.c
src/doc/: Makefile.in  api.spad  bios.tex  book.tex  dedicate.tex  foreword.tex  fricas.sty  fricasmath.sty  ht.awk  htex2input.awk  literatedoc.awk  literatedoc.sty  secmenu.awk  spool2tex.awk  syscmd.awk  tecintro.tex  ugepsf.awk  ugexamples.awk
src/etc/: ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet  SPADEDIT  asq.c  asq.c.pamphlet  axiom  copyright  credits  fricas  fricas-readline  gen-cpl.lisp  jlfricas  resolvelinks.sh  spadedit  spadedit.pamphlet  summary
src/graph/: ChangeLog.bu  Makefile.in  Makefile.pamphlet  Makenotes.tex  fileformats.pamphlet
src/hyper/: ChangeLog  ChangeLog.build-improvements  Makefile.in  Makefile.pamphlet  ReadBitmap.c  ReadBitmap.pamphlet  addfile.c  addfile.h  addfile.pamphlet  cond.c  cond.h  cond.pamphlet  debug.pamphlet  dialog.c  dialog.h  dialog.pamphlet  display.c  display.h  display.pamphlet  event.c  event.h  event.pamphlet  ex2ht.c  ex2ht.pamphlet  extent.h  extent.pamphlet  extent1.c  extent1.pamphlet  extent2.c  extent2.pamphlet  form-ext.c  form-ext.pamphlet  group.c  group.h  group.pamphlet  halloc.c  halloc.pamphlet  hash.c  hash.pamphlet  ht_icon  (+71 more)
src/include/: ReadBitmap.H1  XDither.H1  XShade.H1  XSpadFill.H1  addfile.H1  all_hyper_proto.H1  bsdsignal.H1  bsdsignal.h  cfuns-c.H1  com.h  cond.H1  cursor.H1  debug.h  dialog.H1  edible.H1  edible.h  edin.H1  event.H1  ex2ht.H1  extent1.H1  extent2.H1  fnct_key.H1  form_ext.H1  group.H1  halloc.H1  hash.H1  hash.h  htadd.H1  hterror.H1  hthits.H1  htinp.H1  hyper.H1  initx.H1  input.H1  lex.H1  macro.H1  mem.H1  nagman.H1  openpty.H1  (+20 more)
(+1502 files in other folders)
